# DogBotV4

./: .gitignore  README.md
ROS/: .gitignore  README.md
ROS/src/dogbot_control/: CMakeLists.txt  package.xml
ROS/src/dogbot_control/config/: dogbot_controllers.yaml
ROS/src/dogbot_control/controller/: position_control.yaml
ROS/src/dogbot_control/launch/: controllers.launch  dogbot_display.launch
ROS/src/dogbot_description/: package.xml
ROS/src/dogbot_description/meshes/: LegLower_nofoot.dae  LegUpper_withCover.dae  body.dae  body.stl  bodyTEXT.dae  foot.dae  hip.dae  hip.stl  leg_lower_CF.stl  leg_lower_FOOT.stl  leg_upper.stl  viewmesh.world
ROS/src/dogbot_description/urdf/: ReadMe.md  dogbot.urdf  dogbot.xacro
ROS/src/dogbot_gazebo/: package.xml  readme.md
ROS/src/dogbot_gazebo/launch/: dog.launch  gztest.launch
